--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <section>
       <h2>Photo Gallery</h2>
       <div class="gallery">
-        <img src="Bella on the windowsill.jpeg" alt="Bella on the windowsill">
-        <img src="Bella playing.jpeg" alt="Bella playing">
-        <img src="Bella sleeping.jpg" alt="Bella sleeping">
+        <img src="images/Bella on the windowsill.jpeg" alt="Bella on the windowsill">
+        <img src="images/Bella playing.jpeg" alt="Bella playing">
+        <img src="images/Bella sleeping.jpg" alt="Bella sleeping">
       </div>
     </section>
 
